array.island.Island.scala.error
Compilation error:
Island:5: error: not found: value highestLevel
  highestLevel = 0;
  ^